# quick-shorts

./: README.md
shorts_generator/: Cargo.toml  README.md  shell.nix
shorts_generator/src/: config.rs  lib.rs  main.rs  subtitle_generation.rs  video_processing.rs
